; ModuleID = '/home/carl/AnghaBench/linux/drivers/bus/extr_mips_cdmm.c_mips_cdmm_uevent.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/bus/extr_mips_cdmm.c_mips_cdmm_uevent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.kobj_uevent_env = type { i32 }
%struct.mips_cdmm_device = type { i32, i32, i32 }

@.str = private unnamed_addr constant [12 x i8] c"CDMM_CPU=%u\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"CDMM_TYPE=0x%02x\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"CDMM_REV=%u\00", align 1
@.str.3 = private unnamed_addr constant [24 x i8] c"MODALIAS=mipscdmm:t%02X\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.kobj_uevent_env*)* @mips_cdmm_uevent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mips_cdmm_uevent(%struct.device* %0, %struct.kobj_uevent_env* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.kobj_uevent_env*, align 8
  %6 = alloca %struct.mips_cdmm_device*, align 8
  %7 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.kobj_uevent_env* %1, %struct.kobj_uevent_env** %5, align 8
  %8 = load %struct.device*, %struct.device** %4, align 8
  %9 = call %struct.mips_cdmm_device* @to_mips_cdmm_device(%struct.device* %8)
  store %struct.mips_cdmm_device* %9, %struct.mips_cdmm_device** %6, align 8
  store i32 0, i32* %7, align 4
  %10 = load %struct.kobj_uevent_env*, %struct.kobj_uevent_env** %5, align 8
  %11 = load %struct.mips_cdmm_device*, %struct.mips_cdmm_device** %6, align 8
  %12 = getelementptr inbounds %struct.mips_cdmm_device, %struct.mips_cdmm_device* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @add_uevent_var(%struct.kobj_uevent_env* %10, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %13)
  store i32 %14, i32* %7, align 4
  %15 = load i32, i32* %7, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %2
  %18 = load i32, i32* %7, align 4
  store i32 %18, i32* %3, align 4
  br label %46

19:                                               ; preds = %2
  %20 = load %struct.kobj_uevent_env*, %struct.kobj_uevent_env** %5, align 8
  %21 = load %struct.mips_cdmm_device*, %struct.mips_cdmm_device** %6, align 8
  %22 = getelementptr inbounds %struct.mips_cdmm_device, %struct.mips_cdmm_device* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @add_uevent_var(%struct.kobj_uevent_env* %20, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i32 %23)
  store i32 %24, i32* %7, align 4
  %25 = load i32, i32* %7, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %19
  %28 = load i32, i32* %7, align 4
  store i32 %28, i32* %3, align 4
  br label %46

29:                                               ; preds = %19
  %30 = load %struct.kobj_uevent_env*, %struct.kobj_uevent_env** %5, align 8
  %31 = load %struct.mips_cdmm_device*, %struct.mips_cdmm_device** %6, align 8
  %32 = getelementptr inbounds %struct.mips_cdmm_device, %struct.mips_cdmm_device* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @add_uevent_var(%struct.kobj_uevent_env* %30, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i32 %33)
  store i32 %34, i32* %7, align 4
  %35 = load i32, i32* %7, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %39

37:                                               ; preds = %29
  %38 = load i32, i32* %7, align 4
  store i32 %38, i32* %3, align 4
  br label %46

39:                                               ; preds = %29
  %40 = load %struct.kobj_uevent_env*, %struct.kobj_uevent_env** %5, align 8
  %41 = load %struct.mips_cdmm_device*, %struct.mips_cdmm_device** %6, align 8
  %42 = getelementptr inbounds %struct.mips_cdmm_device, %struct.mips_cdmm_device* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @add_uevent_var(%struct.kobj_uevent_env* %40, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.3, i64 0, i64 0), i32 %43)
  store i32 %44, i32* %7, align 4
  %45 = load i32, i32* %7, align 4
  store i32 %45, i32* %3, align 4
  br label %46

46:                                               ; preds = %39, %37, %27, %17
  %47 = load i32, i32* %3, align 4
  ret i32 %47
}

declare dso_local %struct.mips_cdmm_device* @to_mips_cdmm_device(%struct.device*) #1

declare dso_local i32 @add_uevent_var(%struct.kobj_uevent_env*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
